# math_lib

./: .gitignore  CMakeLists.txt  Complex.hpp  Fraction.hpp  Matrix.hpp  README.md  Stats.hpp  Vector.hpp  main.cpp
examples/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  ComplexTests.cpp  FractionTests.cpp  MatrixTests.cpp  StatsTests.cpp  VectorTests.cpp  main.cpp
